force-app/main/default/objects/Finance_Account_Platform_Event__e/Finance_Account_Platform_Event__e.object-meta.xml
<CustomObject>
    <label>Finance Account Platform Event</label>
    <pluralLabel>Finance Account Platform Events</pluralLabel>
</CustomObject>