force-app/main/default/objects/Finance_Account_Platform_Event__e/fields/CC_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Payment__c</fullName>
    <label>CC Last Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>