force-app/main/default/objects/Finance_Account_Platform_Event__e/fields/CC_Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>CC_Remaining_Balance__c</fullName>
    <label>CC Remaining Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>