force-app/main/default/objects/Finance_Account_Platform_Event__e/fields/SA_Balance__c.field-meta.xml
<CustomField>
    <fullName>SA_Balance__c</fullName>
    <label>SA Balance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>