force-app/main/default/objects/Finance_Account_Platform_Event__e/fields/SMS_External_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_External_Id__c</fullName>
    <label>SMS External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>