force-app/main/default/objects/Finance_Account_Platform_Event__e/fields/SMS_Received_At__c.field-meta.xml
<CustomField>
    <fullName>SMS_Received_At__c</fullName>
    <label>SMS Received At</label>
    <type>DateTime</type>
</CustomField>